Fix sidebar visibility bug

--- a/yukon/less/responsive.less
+++ b/yukon/less/responsive.less
@@ -60,7 +60,7 @@
 			.miniwidget ul li a,
 			.miniwidget ul li span			{ display: block; float: right; }
 
-	body.sidebar-visible div#sidebar					{ flex: 0 0 15rem; }
+	body.sidebar-visible div#sidebar					{ flex: 0 0 15rem; display: block; }
 	body.nav-hidden nav#navigation > div.row	{ display: none; }
 	body.fs-off div.container-fluid						{ padding: 1rem; }
 }
